Simplify BlockColorHandler / BlockItemColorHandler
ItemColorHandler doesn't use an interface for the color, so It's impossible to simplify